# curl-fuzzer

./: .flake8  .gitignore  .travis.yml  CMakeLists.txt  DEBIAN.md  LICENSE  Makefile.am  Makefile.inc  README.md  REPRODUCING.md  buildconf  check_data.sh  ci_oss.sh  codecoverage.sh  codecoverage.sh.off  codeprofile.sh  codeprofile.sh.off  compile_fuzzer.sh  compile_settings  configure.ac  corpus.py  corpus_curl_opt_http_auth.py  corpus_to_pcap.py  create_zip.sh  curl_fuzzer.cc  curl_fuzzer.h  curl_fuzzer_callback.cc  curl_fuzzer_scenario.cc  curl_fuzzer_scenario.h  curl_fuzzer_tlv.cc  curl_fuzzer_tlv_bufq.cc  curl_fuzzer_tlv_bufq.h  curl_fuzzer_tlv_common.cc  curl_fuzzer_tlv_main.cc  curl_fuzzer_tlv_main.h  curl_test_data.py  download_openssl.sh  fuzz_altsvc.cc  fuzz_base64.cc  fuzz_bufq.cc  (+21 more)
.github/workflows/: acr.yml  build.yml  checksrc.yml  ci-i386.yml  ci.yml  codeql.yml  coverage.yml  pages-ci.yml  pages.yml
corpora/: .gitignore
corpora/curl_fuzzer/: oss-fuzz-gen-00777df641fc710c43f4cf479bb40b969e329ff9  oss-fuzz-gen-008ad76b2c900ebcae14f9014b3f2ca038b101a2  oss-fuzz-gen-0093d40acb8da20ca3acc17274326ce40e2a02b1  oss-fuzz-gen-00a0f7f87ea3132d1dc5d3014c9099e99ff8fa07  oss-fuzz-gen-00c1dde119e6dccdb78a44e0e4f19aa548335b66  oss-fuzz-gen-00cd8aedbd9f6827f6dedbfb2bf382fbd596ca5b  oss-fuzz-gen-00e5eae7e0ab230c11b36a1bd0cbb7cad8844a39  oss-fuzz-gen-012aaec27f3bc99703d55264ad1777d6bd435f6a  oss-fuzz-gen-01347891ba748e5cff3fae6280a50b77be51dfe7  oss-fuzz-gen-0141dfa75db4335e053eedf587d3e1e183af2a2c  oss-fuzz-gen-017a9fc9fdebc93fceee4475cd165082445bd48c  oss-fuzz-gen-017e39ca9638c163779d060e707312c695d07788  oss-fuzz-gen-01c2e6ffd6d11f553aabd70b47ed0cbe82e0272e  oss-fuzz-gen-01db6db89e2738a0f7728eed3aec572844532a0b  oss-fuzz-gen-01e986ca1bc68dc86c4649bf025c2d3d4ce37076  oss-fuzz-gen-01f7d0889e7965a490567767e84e38f45529755a  oss-fuzz-gen-0205a341e570c784f125589ad4a660fb466ee8d6  oss-fuzz-gen-020ff1251525a0bea49bd38aff86aeabce81e0d5  oss-fuzz-gen-023ce87ddd2f3f0284fa2ef7ad2243c343f32da2  oss-fuzz-gen-02529e576bc99c0740d92a74a58e9044756a5d77  oss-fuzz-gen-026897443f63d012800343422f4ca0ccc7b7e88d  oss-fuzz-gen-02753a8c36035d9012bdaf6c416ea405894714a5  oss-fuzz-gen-0286812007954152cd68fa9066fe5c7bcca1f020  oss-fuzz-gen-028b2855ded56da84b46fdec88acd8ae828ac9c0  oss-fuzz-gen-02b103a714b5f7e15f73af6ee41fa8e4525fb7df  oss-fuzz-gen-02c4e83fdaf9b33ae24437919066ad46d9b1cd6f  oss-fuzz-gen-02c8a5560b8b5ed4a2d13b0ba8aaca0eacb28e83  oss-fuzz-gen-02d5903050d84d74891dd7f48a3f4aca52b3436c  oss-fuzz-gen-02ee122c70c3581eb0248ced9fee400d8e3d2854  (+1894 more)
curl_fuzz_data/: oss-fuzz-gen-00070fdad78b9d907fce00d63d2933bd0328daa5  oss-fuzz-gen-0021713a616f902eff0acf3c2c68089aacd3efd1  oss-fuzz-gen-002f01fe1c7983acc545f7e78b72ed66e4bb0f1e  oss-fuzz-gen-00551211919d44cb11ec0177f88f7c528640c960  oss-fuzz-gen-0059a73807a6344ad19b8b16794c7952621edc4b  oss-fuzz-gen-005e5887e5917f07cc943939136c07669020c29a  oss-fuzz-gen-0087505048feef9828db4125f5625e2a5bc53f03  oss-fuzz-gen-00880f3f803e857f67d3e253d2be548466e71da9  oss-fuzz-gen-008fecfa0c1fd48855642376479f602d0f4d1f75  oss-fuzz-gen-009094a405cf86c806ce5261e39295aafdb64834  oss-fuzz-gen-009ff7f9d1c588ff2f8953115c814aebb12dcf5e  oss-fuzz-gen-00ac445215450b02572e741f8fc67a7f3529c2b2  oss-fuzz-gen-00ad417b98308180631fb57c3e0cb44b361234c0  oss-fuzz-gen-010935f7a8e135517c51fed7c60e7c5d23e1b470  oss-fuzz-gen-01096fce13f445c51d12f45fd203ff2453dd588f  oss-fuzz-gen-011a85aa449a76015c90bfe8b3ee6f1925c5a2fb  oss-fuzz-gen-0130084cac396da3adadb85d21e9342b00487a8d  oss-fuzz-gen-01360db699cee3cb481f5d6cdb84e157a78d6265  oss-fuzz-gen-0143c9cf1889eff26556e2622de65ece37db6b45  oss-fuzz-gen-0178a303dcde949f85e36bbe25c6a632e62b4a75  oss-fuzz-gen-0180b0b9665242b81f7b2c63a840af86442c4355  oss-fuzz-gen-018142d1f6f4a3994ebf6b4c9644c4d4e708f877  oss-fuzz-gen-018fefb043c1cd40ac3503b22abb54288663538f  oss-fuzz-gen-019ab0d8bc6d2c0f70aedcca232a84e034c1edd8  oss-fuzz-gen-01aa9cc3f1ba1374d2a78cbb7a8c64e05dacd780  oss-fuzz-gen-01ab576f20503b4e14add9dd542422f06adf8926  oss-fuzz-gen-01b19296fcf76a13494bb481864b4ebaa829c209  oss-fuzz-gen-01b6846ac247cea836b16972e70a065790222a7b  oss-fuzz-gen-01c4c08673d1f70babe0445a60b5798d7f4f237a  oss-fuzz-gen-01c8b3c1a93a331ab7a56d23beace4387f61d148  oss-fuzz-gen-01c990bd817c56c5a4d8be8a91b653186958537f  oss-fuzz-gen-01d3804e585198775dfd975bd8f3ef9594b852b2  oss-fuzz-gen-01e67e307b3578dd7c41a6b718a1f04439ee1a7f  oss-fuzz-gen-01f08cd262f0122e775c401bb4da3b7a6552acc0  oss-fuzz-gen-01fdf3d481d3cb5a5c48572f5a2bfbd9a0de3899  oss-fuzz-gen-020e0b7aeacec5224542e19ae396e3035dfa8679  oss-fuzz-gen-0210fc917658938862f6e43b1ae8e814329e4203  oss-fuzz-gen-0213265fbbb2335d979a953816815656d009767b  oss-fuzz-gen-021e0fee057581a906b3c2bee9a48fb455e5faa1  oss-fuzz-gen-022753c987108bdc18b9e25ed5fac0285e49e461  (+3649 more)
docker/: Dockerfile  Dockerfile.repro
ossconfig/: http.dict
proto_fuzzer/: .clang-format  Doxyfile.in  fuzzer_main.cc  mock_server.cc  mock_server.h  mock_server_base.cc  mock_server_base.h  option_apply.cc  option_apply.h  scenario_runner.cc  scenario_runner.h  transfer.cc  transfer.h  websocket_mock_server.cc  websocket_mock_server.h  ws_accept_key.h  ws_frame.cc  ws_frame.h
schemas/: curl_fuzzer.proto  curl_fuzzer_supported_curlopts.txt
scripts/: 32bitdeps.sh  VERSIONS  build_repro_image.py  build_rtmp.sh  check_data.sh  check_i386.sh  compile_fuzzer.sh  compile_structured_corpora.sh  compile_target.sh  create_zip.sh  download_curl.sh  download_gdb.sh  download_nghttp2.sh  download_nghttp3.sh  download_ngtcp2.sh  download_openssl.sh  download_openssl_quic.sh  download_public_corpus.sh  download_zlib.sh  doxygen_check_log.cmake  encode_scenario.sh  fuzz_targets  handle_x.sh  install_curl.sh  install_gdb.sh  install_nghttp2.sh  install_nghttp3.sh  install_ngtcp2.sh  install_openssl.sh  install_openssl_quic.sh  install_zlib.sh  ossfuzzdeps.sh  run_coverage.sh  stdlib_flag_utils.sh  trim_cache.sh  write_lpm_link_rsp.cmake
tests/: test_tlv_constants_sync.py
travis_blacklist/: oss-fuzz-gen-506f248486c61b953ef32290eebb1424a75ac334
zuul.d/: jobs.yaml
(+620 files in other folders)
